--- a/nodeExpress/views/layouts/main.hbs
+++ b/nodeExpress/views/layouts/main.hbs
@@ -1,13 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home page</title>
-</head>
+{{> head }}
 <body>
-    <h1>Home page</h1>
-    <a href="/about">Test</a>
-
+    {{> navbar}}
+    <div class="container">
+        {{{ body }}}
+    </div>
+{{> footer}}
 </body>
 </html>
