--- a/nodeExpress/views/add.hbs
+++ b/nodeExpress/views/add.hbs
@@ -1,1 +1,25 @@
 <h1>Add New Course</h1>
+
+<form action="/add" method="POST">
+    <div class="input-field">
+            <input id="title" name="title" type="text" class="validate" required>
+            <label for="title">Course Name</label>
+            <span class="helper-text" data-error="Enter the name of the course"></span>
+
+    </div>
+    <div class="input-field">
+            <input id="price" name="price" type="number" class="validate" required min="1">
+            <label for="price">Course Price</label>
+            <span class="helper-text" data-error="Enter a price"></span>
+
+    </div>
+        <div class="input-field">
+            <input id="img" type="text" name="img" class="validate" required>
+            <label for="price">Image URL</label>
+            <span class="helper-text" data-error="Enter Image URL"></span>
+
+    </div>
+    <button class="btn btn-primary">
+        Add Course
+    </button>
+</form>
