--- a/nodeExpress/views/courses.hbs
+++ b/nodeExpress/views/courses.hbs
@@ -13,6 +13,7 @@
         </div>
         <div class="card-action">
           <a href="/courses/{{id}}" target="_blank">Open course</a>
+          <a href="/courses/{{id}}/edit?allow=true" target="_blank">Edit course</a>
         </div>
       </div>
     </div>
